--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>This page is under construction</h1>
+<p>https://docs.google.com/presentation/d/14eorVIwec2OVVT4UfUKZS2SwNjxDBmbylxijsFpzXII/edit?usp=sharing</p>
 </body>
 </html>
