--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This page is under construction</h1>
-<p>https://docs.google.com/presentation/d/14eorVIwec2OVVT4UfUKZS2SwNjxDBmbylxijsFpzXII/edit?usp=sharing</p>
+<h1>Yes, I am using a website to open my presentations.</h1>
+<p>https://docs.google.com/presentation/d/1BmpIRGRw1D5bZ0R5l5tPCZso9EzNLQyFkCbmEMYnIwg/edit?usp=sharing</p>
 </body>
 </html>
