--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Yes, I am using a website to open my presentations.</h1>
-<p>https://docs.google.com/presentation/d/1BmpIRGRw1D5bZ0R5l5tPCZso9EzNLQyFkCbmEMYnIwg/edit?usp=sharing</p>
+<table style="font-family: Arial, sans-serif; font-size: 14px;">
+  <tr>
+    <td style="padding-right: 10px;">
+      <img src="https://i.imgur.com/yourlogo.jpg" alt="BCX Studio Logo" width="60" height="60" style="border-radius: 8px;" />
+    </td>
+    <td>
+      <strong>Mehmed Özen</strong><br/>
+      Developer<br/>
+      <strong>BCX Studio</strong><br/>
+      📧 <a href="mailto:bookclubexperimental@gmail.com">bookclubexperimental@gmail.com</a><br/>
+      📍 ODTÜ Teknokent, Ankara
+    </td>
+  </tr>
+</table>
 </body>
 </html>
