--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <table style="font-family: Arial, sans-serif; font-size: 14px;">
   <tr>
     <td style="padding-right: 10px;">
-      <img src="https://i.imgur.com/yourlogo.jpg" alt="BCX Studio Logo" width="60" height="60" style="border-radius: 8px;" />
+      <img src="https://imgur.com/a/fRe5HvM" alt="BCX Studio Logo" width="60" height="60" style="border-radius: 8px;" />
     </td>
     <td>
       <strong>Mehmed Özen</strong><br/>
