--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <section class="panel" id="about">
-    <div class="content">
-      <h1>About Us</h1>
-      <p>We are SOFA Interactive, a studio blending comfort and chaos to create unforgettable indie game experiences.</p>
-    </div>
-  </section>
-
-  <section class="panel" id="games">
-    <div class="content">
-      <h1>Our Games: Still Space</h1>
-      <p>Still Space is a dark, atmospheric horror adventure where the void is never empty...</p>
-    </div>
-  </section>
+<h1>Yes, I am using a website to open my presentations.</h1>
+<p>https://docs.google.com/presentation/d/1ydjeotTxm2A_v1dlhPXZq7ZQMcTqC1jfJ5NrTgOD7YY/edit?slide=id.g350c99edc25_0_0#slide=id.g350c99edc25_0_0</p>
+<table style="font-family: Arial, sans-serif; font-size: 14px;">
+  <tr>
+    <td style="padding-right: 10px;">
+      <img src="https://i.imgur.com/yourlogo.jpg" alt="BCX Studio Logo" width="60" height="60" style="border-radius: 8px;" />
+    </td>
+    <td>
+      <strong>Mehmed Özen</strong><br/>
+      Developer<br/>
+      <strong>BCX Studio</strong><br/>
+      📧 <a href="mailto:bookclubexperimental@gmail.com">bookclubexperimental@gmail.com</a><br/>
+      📍 ODTÜ Teknokent, Ankara
+    </td>
+  </tr>
+</table>
 </body>
 </html>
