--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
 <p>https://docs.google.com/presentation/d/1ydjeotTxm2A_v1dlhPXZq7ZQMcTqC1jfJ5NrTgOD7YY/edit?slide=id.g350c99edc25_0_0#slide=id.g350c99edc25_0_0</p>
 <table style="font-family: Arial, sans-serif; font-size: 14px;">
   <tr>
-    <td style="padding-right: 10px;">
-      <img src="https://i.imgur.com/yourlogo.jpg" alt="BCX Studio Logo" width="60" height="60" style="border-radius: 8px;" />
-    </td>
-    <td>
       <strong>Mehmed Özen</strong><br/>
       Developer<br/>
-      <strong>BCX Studio</strong><br/>
+      <strong>Sofa Interactive</strong><br/>
       📧 <a href="mailto:bookclubexperimental@gmail.com">bookclubexperimental@gmail.com</a><br/>
       📍 ODTÜ Teknokent, Ankara
     </td>
